@@ -1,3 +1,9 @@
+2008-10-28  Sebastian Dröge  <slomo@circular-chaos.org>
+
+	* gst/wavenc/gstwavenc.c: (gst_wavenc_chain):
+	Don't allow width=32,depth=24 as input. WAV requires that the width
+	is the next integer multiply of 8 from the depth.
+
 2008-10-28  Wim Taymans  <wim.taymans@collabora.co.uk>
 
 	* gst/rtp/gstrtpL16depay.c: (gst_rtp_L16_depay_setcaps):
